--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
 		<title>FJOLLA MULLIQI </title>
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
 		<!-- link to custom stylesheet -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="style.css">
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
 
 	
   </head>
-  <body>
+<body> 
+  <header class="container">
+    <div>
+      <h1>Fiolla</h1>
+      <img class="hero-image" src="http://archive.koha.net/fo/4/20150721181502125646.jpg">
+    </div>
+  </header>
+<div class="grid-contaier">
+  <div class="column" id="blue">
+  </div>
   
-		<div>
-		  <div>
-		    <h3>About</h3>
-		  </div>
-		   <div>
-		    <h3>About</h3>
-		  </div>
-		   <div>
-		    <h3>About</h3>
-		  </div>
-		</div>
-
-  </body>
+  <div class="column" id="green">
+  </div>
   
-  
-  
-  
+  <div class="column">
+  </div>
+</div>
+</body>
 </html>
