--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
-<!DOCtype html> 
+<!DOCTYPE html>
 <html>
-  <head> 
-    <meta charset="utf-8">
-		<title>FJOLLA MULLIQI </title>
-		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
-		<!-- link to custom stylesheet -->
-		<link rel="stylesheet" href="style.css">
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
-
-	
+  <head>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
-<body> 
-  <header class="container">
-    <div>
-      <h1>Fiolla</h1>
-      <img class="hero-image" src="http://archive.koha.net/fo/4/20150721181502125646.jpg">
+
+  <body>
+    <header>
+      <div class="heroine-image"><img src="Fiola MulliqiSMALL">
+        <div class="heroine-title">
+          <h1>Fiola Mulliqi</h1>
+        </div>
+      </div>
+    </header>
+
+    <div class="scroll">
+      <marquee>Fiola Mulliqi is </marquee>
     </div>
-  </header>
-<div class="grid-contaier">
-  <div class="column" id="blue">
-  </div>
-  
-  <div class="column" id="green">
-  </div>
-  
-  <div class="column">
-  </div>
-</div>
-</body>
+
+    <div class="grid-container">
+      <div class="grid-column">
+        <h1>About</h1>
+        <p class="content">
+          Fiola is a BIM Specialist, combining design skill with progressive construction techniques. In addition to BIM modelling and coordination of over 700,000 Sq/ft, Fiola has executed Digital Layout Points and 3D laser scanning;her wide experience on Reality Capture made her come up with internal standards for registration and pointclouds , lately she has Pre-fabricated interior components, a service uniquely executed by her and her team.
+        </p>
+      </div>
+
+      <div class="grid-column">
+        <h1>Yolo</h1>
+        <p class="content"> Once is Enough, trust me</p>
+      </div>
+
+      <div class="grid-column">
+        <h1>Masters</h1>
+        <p class="content">
+          Fiola has a Masters in Architecture from Eastern Mediterranean University and working on AIA licensure to become Licensed Architect in the state of NY.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
