--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+<html><head>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
     <header>
-      <div class="heroine-image"><img src="Fiola MulliqiSMALL">
+      <div class="fiola.jpg">
         <div class="heroine-title">
           <h1>Fiola Mulliqi</h1>
         </div>
@@ -14,7 +12,8 @@
     </header>
 
     <div class="scroll">
-      <marquee>Fiola Mulliqi is </marquee>
+      <marquee>Her heart comes in many shades of gray, yet is ablaze with fierce
+      spirit.</marquee>
     </div>
 
     <div class="grid-container">
@@ -37,5 +36,5 @@
         </p>
       </div>
     </div>
-  </body>
-</html>
+  
+</body></html>
