--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <body>
     <header>
-      <div class="fiola.jpg">
+      <div class="heroine-image"><img src="fiola.jpg">
         <div class="heroine-title">
           <h1>Fiola Mulliqi</h1>
         </div>
